--- a/vignettes/wip.Rmd
+++ b/vignettes/wip.Rmd
@@ -1,14 +1,39 @@
+---
+title: "Introduction to scops"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Introduction to dplyr}
+  %\VignetteEngine{knitr::rmarkdown}
+  \usepackage[utf8]{inputenc}
+---
+
+```{r, echo = FALSE, message = FALSE}
+knitr::opts_chunk$set(collapse = T, comment = "#>")
+options(tibble.print_min = 4L, tibble.print_max = 4L)
+library(dplyr)
+library(ggplot2)
+set.seed(1014)
+```
+
+## `scop`: Single-Cell Operations in R.
+
+* Identify cell clusters with distinct expression patterns
+* Capture expression patterns by defining gene signatures
+* Integrate individual signatures into meta-signatures
+* Characterise cell populations or *states* using meta-signatures
+
+scop definition:
 
 # sparse matrix
 head(bt771)
-
-# in tpm form
+# ... is in tpm form
 range(bt771)
 # also converts from sparse matrix
 m = logtpm(bt771, bulk = F)
 range(m)
-
+# Center gene
 m = rowcenter(m)
+# check that centering worked
 range_rowmeans(m)
 
 args(hca)
@@ -32,4 +57,5 @@ range(lengths(less.clusters))
 clusters = less.clusters
 
 ?dea
-dea(m = m, )
+
+
